# cs188-final-project

./: .gitignore  .secret.env  Info.css  README.md  app.py  book_testing.py  config.py  database_connection_testing.py  database_search.py  flask.py  functions.py  get_highest_rated_books.py  main.py  pyproject.toml  recommendation.py  requirements.txt  test.py  test_app.py  testing.py  top_books_run_1.csv
.github/workflows/: main_eibert-amelia-final-project-webapp.yml
static/: style.css
static/styles/: style.css
templates/: detail.html  index.html  results.html
tests/: test_app.py  test_functions.py
